--- a/style.css
+++ b/style.css
@@ -1,22 +1,24 @@
+body {
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+
 h1 {
     margin-top: 30px;
 }
-.btn {
-    padding: 25px;
-    margin-top: -50px;
-}
 
 .botao {
+    position: absolute;
     background: rgba(0,0,0,0);
     color: #2569e7;
-    position: absolute;
+    border: 1px solid #0550f1;
+    border-radius: 6px;
     margin: 0 auto;
     top: 50%;
     left: 50%;
     transform: translate(-50%, 10%);
     padding: 25px;
-    border: 1px solid #0550f1;
-    border-radius: 6px;
+    
     cursor: pointer;
     transition: 200ms;
 }
@@ -24,4 +26,9 @@ h1 {
 .botao:hover {
     background-color: #0550f1;
     color: white;
+}
+
+.btn {
+    padding: 25px;
+    margin-top: -50px;
 }
